--- a/README.org
+++ b/README.org
@@ -3,14 +3,14 @@ These are code solutions to the problems of [[https://adventofcode.com/2022][Adv
 Using Ruby as of day 2, but this may change depending on the difficulty, mood, food etc
 
 ** Running
-the =.rb= files can be run directly as executable
+The =.rb= files can be run directly as executable
 #+BEGIN_SRC bash
-  $ chmod +x day1.rb
+  $ chmod +x day1.rb < input
   $ ./day1.rb
 #+END_SRC
 
 or using a ruby interpreter
 #+BEGIN_SRC bash
-  $ ruby day1.rb
+  $ ruby day1.rb < input
 #+END_SRC
 
